Moved models out into their own file. Added decorators for login/registration checks. New pages for adding subscriptions.

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,8 @@
 
 {% block content %}
 <h1>RSS Engine</h1>
+<a href="{{logout}}">Log Out</a>
 <p>
-	Hello {{nickname}}
+	Hello {{nickname}}.
 </p>
 {% endblock %}
