--- a/templates/subscribe.html
+++ b/templates/subscribe.html
@@ -7,8 +7,6 @@
 <form method="POST" action="">
 	<label for="url">Feed URL:</label>
 	<input type="text" value="" name="url" id="url" /><br/>
-	<label for="name">Feed Name:</label>
-	<input type="text" value="" name="name" id="name" /><br/>
-	<input type="submit" value="Subscribe" />
+	<input type="submit" value="Next &raquo;" />
 </form>
 {% endblock %}
