More cleanup, added a 404 page.

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,13 +3,8 @@
 {% block title %}RSS Engine - Home{% endblock %}
 
 {% block content %}
-<p>
-	<a href="/subscriptions">Subscriptions</a> |
-	<a href="{{logout}}">Log Out</a>
-</p>
 <h1>RSS Engine</h1>
 <p>
-	Hello {{nickname}}.
+	Welcome to RSS Engine. I should explain what RSS Engine does on this page.
 </p>
-
 {% endblock %}
