--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,6 +4,7 @@
 		<link rel="stylesheet" href="css/main.css" media="screen" />
 	</head>
 	<body>
+		{% block menu %}<a href="/">Home</a> | <a href="/subscriptions">Log In / Register</a>{% endblock %}
 		{% block content %}{% endblock %}
 	</body>
 </html>
